--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -32,7 +32,7 @@
 
 @media (min-width: $screen-sm-min)
 {
-	#content section > p, #content section > ul, #content section > ol, #content section > blockquote
+	#content section > p, #content section > ul, #content section > ol, #content section > blockquote, #content section > #footnote
 	{
 	    max-width:75%;
 	}
