--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
 			</button>
 			<a href="/" class="navbar-brand"><%= fa_icon "home" %>
 				<span class=""><%= Settings.short_course_name %></span>
-				<span class="hidden-xs hidden-sm"><small><%= @schedule_name %></small></span>
+				<span class="hidden-xs hidden-sm"><small><%= @group_name || @schedule_name %></small></span>
 			</a>
 		</div>
 			
