--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -256,3 +256,18 @@ th.rotate > div
 
 	width: 30px;
 }
+
+span.bubble {
+  display: inline-block;
+  vertical-align:top;
+  max-width:20em;
+  padding: 2em;
+  text-align: center;
+  background-color: #fff;
+  border: 2px solid #DCE0E4;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
+
