--- a/app/views/user/_grade.html.erb
+++ b/app/views/user/_grade.html.erb
@@ -1,9 +1,11 @@
 <h4>
-	<span style="color:gray"><%= grade.grader.name %></span> graded <%= grade.pset.name %>:
-	<% grade.subgrades.each_pair do |k,v| %>
-	<%= v %> /
-	<% end %>
-	<strong><%= translate_grade(grade.grade) %></strong>
+	<span style="color:gray"><%= grade.grader.name %></span> graded <%= grade.pset.name %>
 </h4>
+<p>
+	<% grade.subgrades.each_pair do |k,v| %>
+	<span class="label label-default"><%= k.capitalize %>: <span class="badge"><%= v %></span></span>
+	<% end %>
+	<span class="label label-default"> total: <span class="badge"><%= translate_grade(grade.grade) %></span></span>
+</p>
 
 <%= simple_markdown(grade.comments) %>
