--- a/app/views/user/_grade.html.erb
+++ b/app/views/user/_grade.html.erb
@@ -5,7 +5,7 @@
 	<% grade.subgrades.each_pair do |k,v| %>
 	<button class="btn btn-sm btn-info"><%= k.capitalize %> <span class="badge"><%= v %></span></button>
 	<% end %>
-	<button class="btn btn-sm btn-primary"> Total <span class="badge"><%= translate_grade(grade.any_final_grade) %></span></button>
+	<button class="btn btn-sm btn-primary"> Grade <span class="badge"><%= translate_grade(grade.any_final_grade) %></span></button>
 </p>
 
 <%= simple_markdown(grade.comments) %>
