--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -92,6 +92,7 @@
 			<% end %>
 			<% end %>
 			
+			<% if current_user.assistant? && not(@grading_definition && @grading_definition['subgrades'] && @grading_definition['calculation']) %>
 			<div class="form-group">
 				<label for="inputPassword3" class="col-sm-3 control-label">Grade</label>
 				<div class="col-sm-9">
@@ -104,6 +105,7 @@
 					</div>
 				</div>
 			</div>
+			<% end %>
 
 			<% if current_user.admin? %>
 			<div class="form-group">
