--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -6,16 +6,17 @@
 
 	<p>
 		<% if current_user.senior? %>
-		<%= link_to '<i class="glyphicon glyphicon-ok"></i> Publish what\'s done'.html_safe, students_mark_all_public_path, method: 'post', class: 'btn btn-default', data: { confirm:'Are you sure?' } %>
+		<%= link_to '<i class="glyphicon glyphicon-ok"></i> Publish what\'s done'.html_safe, students_mark_all_public_path(schedule: @current_schedule.id), method: 'post', class: 'btn btn-default', data: { confirm:'Are you sure?' } %>
 		<% end %>
 		<% if current_user.admin? %>
-		<%= link_to '<i class="glyphicon glyphicon-ok"></i> Publish my grades'.html_safe, students_mark_my_public_path, method: 'post', class: 'btn btn-default', data: { confirm:'Are you sure?' } %>
+		<%= link_to '<i class="glyphicon glyphicon-ok"></i> Publish my grades'.html_safe, students_mark_my_public_path(schedule: @current_schedule.id), method: 'post', class: 'btn btn-default', data: { confirm:'Are you sure?' } %>
 		<%= link_to '<i class="glyphicon glyphicon-ok"></i> Publish everything'.html_safe, students_mark_everything_public_path(schedule: @current_schedule.id), method: 'post', class: 'btn btn-default', data: { confirm:'DANGEROUS, this even publishes stuff that is not done. Are you sure?' } if @current_schedule %>
 		<%= link_to '<i class="glyphicon glyphicon-user"></i> Import Groups'.html_safe, admin_import_path, class:'btn btn-default' %>
 		<%= link_to '<i class="glyphicon glyphicon-user"></i> Generate Groups'.html_safe, admin_generate_groups_path(schedule_id: @current_schedule && @current_schedule.id), class:'btn btn-default' %>
 		<%= link_to '<i class="glyphicon glyphicon-th"></i> Export Grades for Excel'.html_safe, admin_export_grades_path(format: 'xlsx'), class:'btn btn-default' %>
 		<%= link_to '<i class="glyphicon glyphicon-print"></i> Dump Grades for archiving'.html_safe, admin_dump_grades_path, class:'btn btn-default' %>
 		<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Statistics'.html_safe, admin_stats_path, class:'btn btn-default' %>
+		<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Close submit for pset'.html_safe, students_late_form_path, class:'btn btn-default' %>
 		<% end %>
 		<% if current_user.admin? %>
 		<% if GradeTools.available? %>
