--- a/app/views/students/notify_non_submits.html.erb
+++ b/app/views/students/notify_non_submits.html.erb
@@ -12,7 +12,8 @@
 </div>
 <div class="form-group">
 	<label for="exampleInputEmail1">Send this message:</label>
-	<textarea name="text" class="form-control">Let op: je hebt nog niets ingestuurd voor deze opdracht! Geen probleem, maar vergeet niet om vóór de deadline te submitten!</textarea>
+	<textarea name="text" class="form-control">Let op: je hebt nog niets ingestuurd voor deze opdracht! Geen probleem,
+maar vergeet niet om vóór de deadline te submitten!</textarea>
 </div>
 <input type="submit" class="btn btn-default">
 
