--- a/app/views/user/_hand.html.erb
+++ b/app/views/user/_hand.html.erb
@@ -4,6 +4,7 @@
 	<% if hand.assist %>
 	<span class="bubble">
 		<%= hand.evaluation %>
+		<%= hand.progress %>
 		<%= hand.note %>
 	</span>
 	<% end %>
