--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -52,7 +52,11 @@
 <img src="<%= @student.avatar %>" style="max-width:70px">
 <% end %>
 
-
+<% if @student.alarm %>
+<%= button_to "Remove alarm", user_set_alarm_path(user_id: @student.id, alarm: :false), class: "btn btn-xs btn-warning", data: { confirm: "Sure?" } %>
+<% else %>
+<%= button_to "Set alarm", user_set_alarm_path(user_id: @student.id, alarm: true), class: "btn btn-xs btn-warning", data: { confirm: "Sure?" } %>
+<% end %>
 
 <%= form_for(@note) do |f| %>
 <%= f.hidden_field :student_id %>
