--- a/app/views/students/statuses.html.erb
+++ b/app/views/students/statuses.html.erb
@@ -21,7 +21,7 @@
 		<td><%= user.questions_count_cache %></td>
 
 		<% user.hands.each do |hand| %>
-		<td data-toggle="tooltip" data-placement="bottom" title="<%= hand.assist.name.split[0] %>"><%= hand.evaluation %><br><%= hand.progress %></td>
+		<td data-toggle="tooltip" data-placement="bottom" title="<%= hand.assist.name.split[0] if hand.assist %>"><%= hand.evaluation %><br><%= hand.progress %></td>
 		<% end %>
 
 	</tr>
