--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -26,8 +26,10 @@
 <% elsif current_user.head? %>
 <li><%= link_to '<i class="glyphicon glyphicon-check"></i> Show pages'.html_safe, admin_pages_path %></li>
 <li><%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, students_path %></li>
+<% if current_user.groups.any? or current_user.schedules.any? %>
 <li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path %></li>
 <li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, submits_discuss_path %></li>
+<% end %>
 <% if Settings.hands_allow %>
 <li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-time"></i> Set availability'.html_safe, hands_available_path %></li>
@@ -48,10 +50,12 @@
 <% if Settings.hands_allow %>
 <li><%= link_to '<i class="glyphicon glyphicon-time"></i> Set availability'.html_safe, hands_available_path %></li>
 <li><%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands list'.html_safe, hands_path %></li>
-<li class="divider"></li>
 <% end %>
+<% if current_user.groups.any? or current_user.schedules.any? %>
+<li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path %></li>
 <li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, submits_discuss_path %></li>
+<% end %>
 <% if Settings['links'] %>
 <li class="divider"></li>
 <% Settings['links'].each do |title, url| %>
