allow heads to view perms

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -26,7 +26,9 @@
 <% elsif current_user.head? %>
 <li><%= link_to '<i class="glyphicon glyphicon-check"></i> Show pages'.html_safe, admin_pages_path %></li>
 <li><%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, students_path %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-eye-open"></i> View permissions'.html_safe, permissions_path %></li>
 <% if current_user.groups.any? or current_user.schedules.any? %>
+<li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path %></li>
 <li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, submits_discuss_path %></li>
 <% end %>
