--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -32,7 +32,7 @@
 </div>
 
 <% if @grade.published? %>
-<%= link_to "Mark as Discussed", submit_grade_path(submit_id: @submit.id, grade: { status: :discussed }, referer: submits_discuss_path), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-primary' %>
+<%= link_to "Mark as Discussed", submit_grade_path(submit_id: @submit.id, grade: { status: :discussed }, referer: discuss_submits_path), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-primary' %>
 <% end %>
 <% if current_user.senior? && @submit.grade %>
 <%= link_to "Re-open this grade", submit_grade_path(submit_id: @submit.id, grade: { status: :open }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-default' %>
