--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -6,7 +6,7 @@
 <li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, students_path %></li>
 <li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path %></li>
-<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, submits_discuss_path %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, discuss_submits_path %></li>
 <% if Settings.hands_allow %>
 <li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-time"></i> Set availability'.html_safe, hands_available_path %></li>
@@ -30,7 +30,7 @@
 <% if current_user.groups.any? or current_user.schedules.any? %>
 <li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path %></li>
-<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, submits_discuss_path %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, discuss_submits_path %></li>
 <% end %>
 <% if Settings.hands_allow %>
 <li class="divider"></li>
@@ -56,7 +56,7 @@
 <% if current_user.groups.any? or current_user.schedules.any? %>
 <li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path %></li>
-<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, submits_discuss_path %></li>
+<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Discussion list'.html_safe, discuss_submits_path %></li>
 <% end %>
 <% if Settings['links'] %>
 <li class="divider"></li>
