--- a/app/views/submits/index.html.erb
+++ b/app/views/submits/index.html.erb
@@ -4,6 +4,7 @@
 
 <table class="table">
 	<tr>
+		<th>schedule</th>
 		<th>pset</th>
 		<th>name</th>
 		<th>id</th>
@@ -14,6 +15,7 @@
 
 	<% @to_grade.each do |submit| %>
 	<tr class="<%= submit.grade %>">
+		<td><%= submit.user.schedule && submit.user.schedule.name %></td>
 		<td><%= submit.pset && submit.pset.name %></td>
 		<td><%= link_to submit.user.name, submit_grade_path(submit_id: submit.id) %></td>
 		<td><%= submit.user.login_id %></td>
