--- a/app/views/stats/hands.html.erb
+++ b/app/views/stats/hands.html.erb
@@ -18,8 +18,16 @@
 		<td><% if entry.helpline %><span class="glyphicon glyphicon-phone-alt text-danger"></span><% end %></td>
 		<td><%= entry.assist.name if entry.assist %></td>
 		<td><%= entry.user.name %></td>
-		<td><span data-placement="bottom" data-toggle="tooltip" title="<%= entry.note %>"><%= distance_of_time_in_words(entry.claimed_at - entry.created_at) %></span></td>
-		<td><%= distance_of_time_in_words(entry.closed_at - entry.claimed_at) %></button></td>
+		<td>
+			<% if entry.claimed_at %>
+			<span data-placement="bottom" data-toggle="tooltip" title="<%= entry.note %>"><%= distance_of_time_in_words(entry.claimed_at - entry.created_at) %></span>
+			<% end %>
+		</td>
+		<td>
+			<% if entry.claimed_at && entry.closed_at %>
+			<%= distance_of_time_in_words(entry.closed_at - entry.claimed_at) %></button>
+			<% end %>
+		</td>
 		<td><%= entry.evaluation %></td>
 	</tr>
 	<% end %>
