--- a/app/views/stats/hands.html.erb
+++ b/app/views/stats/hands.html.erb
@@ -21,6 +21,8 @@
 		<td>
 			<% if entry.claimed_at %>
 			<span data-placement="bottom" data-toggle="tooltip" title="<%= entry.note %>"><%= distance_of_time_in_words(entry.claimed_at - entry.created_at) %></span>
+			<% else %>
+			<%= distance_of_time_in_words(DateTime.now - entry.created_at) %>
 			<% end %>
 		</td>
 		<td>
