--- a/app/views/stats/hands.html.erb
+++ b/app/views/stats/hands.html.erb
@@ -1,8 +1,7 @@
 <table class="table">
 	<tr>
 		<th>created</th>
-		<th>done</th>
-		<th>found/success</th>
+		<th>closed</th>
 		<th>hulplijn</th>
 		<th>assistent</th>
 		<th>student</th>
@@ -13,8 +12,12 @@
 	<% @today.each do |entry| %>
 	<tr>
 		<td><span data-placement="bottom" data-toggle="tooltip" title="<%= entry.help_question %>"><%= entry.created_at.strftime("%H:%M") %></span></td>
-		<td><%= entry.done ? "v" : "" %></td>
-		<td><%= entry.success ? "v" : "x" %></td>
+		<td>
+			<% if entry.done && entry.success %>
+			<span class="text-success">v</span>
+			<% elsif entry.done && !entry.success %>
+			<span class="text-danger">x</span>
+			<% end %>
 		<td><% if entry.helpline %><span class="glyphicon glyphicon-phone-alt text-danger"></span><% end %></td>
 		<td><%= entry.assist.name if entry.assist %></td>
 		<td><%= entry.user.name %></td>
