Added zebra striped

--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -1,4 +1,4 @@
-	<table id="grade-table" class="table table-condensed">
+	<table id="grade-table" class="table table-condensed table-striped">
 
 		<tr>
 			<th>Name</th>
