--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -17,9 +17,11 @@
 				<% if current_user.admin? %>
 				<li><%= link_to 'Publish my grades, even if not done'.html_safe, publish_mine_grades_path(schedule: @current_schedule_id), method: 'post', data: { confirm:'Are you sure?' } %></li>
 				<li><%= link_to 'Publish everything that\'s a valid grade'.html_safe, publish_all_grades_path(schedule: @current_schedule_id), method: 'post', data: { confirm:'DANGEROUS, this even publishes stuff that is not done. Are you sure?' } %></li>
+				<% if Schedule.any? %>
 				<li role="separator" class="divider"></li>
 				<li><%= link_to 'Notify students who did not submit yet'.html_safe, form_for_missing_submits_path %></li>
 				<li><%= link_to 'Fail students who missed some deadline'.html_safe, form_for_late_submits_path %></li>
+				<% end %>
 				<% end %>
 				<% if current_user.admin? && GradeTools.available? %>
 				<li role="separator" class="divider"></li>
