--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -7,12 +7,18 @@
 			<% @groups.each do |group| %>
 			<li <%= 'class=disabled' if @student.group_id == group.id %> ><%= link_to "Move to #{group.name}".html_safe, user_assign_group_path(user_id: @student.id, group_id: group.slug), method: :post %></li>
 			<% end if @groups %>
+			<% if @groups.any? %>
 			<li role="separator" class="divider"></li>
+			<% end %>
 			<% @schedules.each do |schedule| %>
 			<li <%= 'class=disabled' if @student.schedule_id == schedule.id %> ><%= link_to "Assign to #{schedule.name}".html_safe, user_assign_schedule_path(user_id: @student.id, schedule_id: schedule.id), method: :post %></li>
 			<% end %>
+			<% if @schedules.any? %>
+			<li><%= link_to 'Remove from all schedules', user_path(id: @student.id, user: { schedule_id: nil }), method: :put %></li>
+			<li role="separator" class="divider"></li>
+			<% end %>
 			<% if @student.active? %>
-			<li><%= link_to 'Mark as inactive', user_path(id: @student.id, user: { schedule_id: nil }), method: :put %></li>
+			<li><%= link_to 'Mark as inactive', user_path(id: @student.id, user: { active: false }), method: :put %></li>
 			<% else %>
 			<li><%= link_to 'Mark as active', user_path(id: @student.id, user: { active: true }), method: :put %></li>
 			<% end %>
@@ -22,9 +28,9 @@
 			<li><%= link_to 'Make head', user_path(id: @student.id, user: { role: :head }), method: :put %></li>
 			<li><%= link_to 'Make admin', user_path(id: @student.id, user: { role: :admin }), method: :put %></li>
 			<li><%= link_to 'Undo admin', user_path(id: @student.id, user: { role: :student, schedule_id: nil }), method: :put %></li>
-			<% end %>
 			<li role="separator" class="divider"></li>
 			<li><%= link_to_if GradeTools.available?, 'Calculate final grade', user_calculate_final_grade_path(user_id: @student.id), method: :post %></li>
+			<% end %>
 		</ul>
 	</div>
 </div>
